fix: remove overlapping pixel in load bar

--- a/src/components/CpuLoadGauge/CpuLoadGauge.scss
+++ b/src/components/CpuLoadGauge/CpuLoadGauge.scss
@@ -58,7 +58,7 @@ $gauge-bar-width: 4px;
       display: block;
       font-size: 1.8em;
       border-bottom: 1px solid #111;
-      margin-bottom: 15px;
+      margin: 0 $gauge-bar-width 15px;
       padding-bottom: 8px;
     }
     
@@ -106,7 +106,7 @@ $gauge-bar-width: 4px;
     opacity: 1;
   }
   98% {
-    opacity: 0.7;
+    opacity: 0.8;
   }
   100% {
     transform: rotate(180deg);
